--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "dayjs": "1.11.13",
     "deepslate": "0.23.6",
     "echarts": "5.6.0",
+    "file-saver": "^2.0.5",
     "gl-matrix": "^3.4.3",
+    "jszip": "^3.10.1",
     "prismarine-nbt": "2.7.0",
     "vite-plugin-vuetify": "2.1.1",
     "vue": "3.5.13",
