--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@actions/github": "6.0.0",
     "@kyvg/vue3-notification": "3.4.1",
     "@mdi/font": "7.4.47",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@tauri-apps/api": "2.4.1",
     "@tauri-apps/plugin-dialog": "2.2.1",
     "@tauri-apps/plugin-fs": "2.2.1",
@@ -30,7 +31,9 @@
     "echarts": "5.6.0",
     "file-saver": "^2.0.5",
     "gl-matrix": "^3.4.3",
+    "json-editor-vue3": "^1.1.1",
     "jszip": "^3.10.1",
+    "nbt-ts": "^1.3.6",
     "prismarine-nbt": "2.7.0",
     "vite-plugin-vuetify": "2.1.1",
     "vue": "3.5.13",
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "2.4.1",
+    "@types/jsoneditor": "^9.9.6",
     "@vitejs/plugin-vue": "5.2.3",
     "sass-embedded": "1.86.3",
     "typescript": "5.6.3",
